--- a/ERS.HotWheels.Collectors.Infra.IoC/ERS.HotWheels.Collectors.Infra.IoC.csproj
+++ b/ERS.HotWheels.Collectors.Infra.IoC/ERS.HotWheels.Collectors.Infra.IoC.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <ProjectReference Include="..\ERS.HotWheels.Collectors.Domain.Interfaces\ERS.HotWheels.Collectors.Domain.Interfaces.csproj" />
     <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Cqrs.Commands\ERS.HotWheels.Collectors.Infra.Cqrs.Commands.csproj" />
+    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.Dapper\ERS.HotWheels.Collectors.Infra.Data.Dapper.csproj" />
+    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.RepositoryComplex\ERS.HotWheels.Collectors.Infra.Data.Queries.csproj" />
     <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.Repository\ERS.HotWheels.Collectors.Infra.Data.Repository.csproj" />
   </ItemGroup>
 
